update  sign up and send email code handler service and repository logics
