# docs/swagger.yaml
@@ -78,6 +78,10 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/error.errorResponse'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/error.errorResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -115,6 +119,10 @@ paths:
             $ref: '#/definitions/error.errorResponse'
         "404":
           description: Not Found
+          schema:
+            $ref: '#/definitions/error.errorResponse'
+        "409":
+          description: Conflict
           schema:
             $ref: '#/definitions/error.errorResponse'
         "500":
@@ -156,6 +164,10 @@ paths:
             $ref: '#/definitions/error.errorResponse'
         "404":
           description: Not Found
+          schema:
+            $ref: '#/definitions/error.errorResponse'
+        "409":
+          description: Conflict
           schema:
             $ref: '#/definitions/error.errorResponse'
         "500":
